@@ -37,7 +37,7 @@ func NewInstaller(config *artifact.Config) (*Installer, error) {
 
 // Install performs installation of program in a specific version.
 // It expects package to be already downloaded.
-func (i *Installer) Install(_ context.Context, spec program.Spec, version, installDir string) error {
+func (i *Installer) Install(ctx context.Context, spec program.Spec, version, installDir string) error {
 	artifactPath, err := artifact.GetArtifactPath(spec, version, i.config.OS(), i.config.Arch(), i.config.TargetDirectory)
 	if err != nil {
 		return err
@@ -49,7 +49,7 @@ func (i *Installer) Install(_ context.Context, spec program.Spec, version, insta
 		os.RemoveAll(installDir)
 	}
 
-	if err := i.unzip(artifactPath); err != nil {
+	if err := i.unzip(ctx, artifactPath); err != nil {
 		return err
 	}
 
@@ -69,7 +69,7 @@ func (i *Installer) Install(_ context.Context, spec program.Spec, version, insta
 	return nil
 }
 
-func (i *Installer) unzip(artifactPath string) error {
+func (i *Installer) unzip(ctx context.Context, artifactPath string) error {
 	r, err := zip.OpenReader(artifactPath)
 	if err != nil {
 		return err
@@ -120,6 +120,11 @@ func (i *Installer) unzip(artifactPath string) error {
 	}
 
 	for _, f := range r.File {
+		// if we were cancelled in between
+		if err := ctx.Err(); err != nil {
+			return err
+		}
+
 		if err := unpackFile(f); err != nil {
 			return err
 		}
